# jumpto

./: .gitignore  Cargo.toml  Justfile  README.md
src/: commands.rs  config.rs  jt  main.rs
