[package]
name = "jumpto"
version = "0.1.0"
authors = ["Celeo <mattboulanger@fastmail.com>"]
edition = "2018"
description = "Simple CLI utility to navigate to directories"
readme = "README.md"
homepage = "https://github.com/celeo/jumpto"
repository = "https://github.com/celeo/jumpto"
license = "MIT OR Apache-2.0"
exclude = [
  ".github"
]
keywords = [
  "jump",
  "navigation",
  "directory"
]
categories = [
  "command-line-utilies"
]

[dependencies]
anyhow = "1.0.32"
colored = "2.0.0"
fern = { version = "0.6.0", features = ["colored"]}
home = "0.5.3"
log = "0.4.11"
prettytable-rs = "0.8.0"
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.57"
structopt = "0.3.16"
